# advent-of-code

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
2023/1/: decode_trebuchet.py  decode_trebuchet_calibrations.py
2023/2/: games_with_the_elf.py
2023/3/: elf_gondola_schematic.py
2023/4/: elf_scratchcard_scoring.py
2023/6/: toy_boat_race_record_breaking.py
2023/7/: camel_poker.py
2023/8/: desert_ghost_network.py
2023/9/: oasis_sand_analysis.py
2024/01/: locations.py
2024/02/: reports.py
2024/03/: toboggan_rental_memory.py
2025/01/: secret-entrance.py
2025/02/: invalid-ids.py
2025/03/: escalator-batteries.py
2025/04/: forklifts.py
2025/05/: freshingredients.py
2025/06/: cephalopod-homework.py  input
2025/07/: tachyon-manifold.py
